--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
               <div class="columns is-centered" id="div_tiger" style="display: true;">
                 <div class="column">
                   <div class="content has-text-centered">
-                    <img src="./image_assets/footnote/tiger/tiger_gt.jpg" id="tiger" width="80%">
+                    <img src="./image_assets/footnote/tiger/tiger_gt.png" id="tiger" width="80%">
                   </div>
                 </div>
               </div>
