add tiger2leo all

--- a/index.html
+++ b/index.html
@@ -877,14 +877,14 @@
               <div class="columns is-centered" id="div_tiger" style="display: true;">
                 <div class="column">
                   <div class="content has-text-centered">
-                    <img src="./image_assets/footnote/tiger/tiger_gt.png" id="tiger" width="150%">
+                    <img src="./image_assets/footnote/tiger/tiger_gt.png" id="tiger" width="200%">
                   </div>
                 </div>
               </div>
               <div class="columns is-centered" id="div_cat" style="display: none;">
                 <div class="column">
                   <div class="content has-text-centered">
-                    <img src="./image_assets/footnote/cat/cat_gt.jpg" id="cat" width="150%">
+                    <img src="./image_assets/footnote/cat/cat_gt.jpg" id="cat" width="200%">
                   </div>
                 </div>
               </div>
@@ -1167,10 +1167,10 @@
       var sr = document.getElementById('sr');
       var mb = document.getElementById('mb');
       var inpaint = document.getElementById('inpaint');
-      deblur.src = "./image_assets/footnote/deblur/deblur_" + currentInvMethod + ".png";
-      sr.src = "./image_assets/footnote/sr/sr_" + currentInvMethod + ".png";
-      mb.src = "./image_assets/footnote/mb/mb_" + currentInvMethod + ".png";
-      inpaint.src = "./image_assets/footnote/inpaint/inpaint_" + currentInvMethod + ".png";
+      deblur.src = "./image_assets/footnote/deblur/deblur_" + currentInvMethod + ".jpg";
+      sr.src = "./image_assets/footnote/sr/sr_" + currentInvMethod + ".jpg";
+      mb.src = "./image_assets/footnote/mb/mb_" + currentInvMethod + ".jpg";
+      inpaint.src = "./image_assets/footnote/inpaint/inpaint_" + currentInvMethod + ".jpg";
     }
     function ChangePromptInverse(idx) {
       var li_list = document.getElementById("prompt-view-ul-inv").children;
