add cat2fox all

--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
               <div class="columns is-centered" id="div_cat" style="display: none;">
                 <div class="column">
                   <div class="content has-text-centered">
-                    <img src="./image_assets/footnote/cat/cat_gt.jpg" id="cat" width="200%">
+                    <img src="./image_assets/footnote/cat/cat_gt.png" id="cat" width="200%">
                   </div>
                 </div>
               </div>
