--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2304.06720" class="external-link button is-normal is-rounded is-dark">
+                  <a href="" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -163,7 +163,7 @@
                     <span>Code</span>
                   </a>
                 </span>
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a href="https://huggingface.co/spaces/liturout/rich-text-to-image"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -171,7 +171,7 @@
                     </span>
                     <span>Demo</span>
                   </a>
-                </span>
+                </span> -->
                 <span class="link-block">
                   <a href="https://stsl-inverse-edit.github.io/#bibtex"
                     class="external-link button is-normal is-rounded is-dark">
@@ -1083,17 +1083,17 @@
       </div>
     </div>
   </section>
-  <!-- <section class="section" id="BibTeX">
+  <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title"><a id="bibtex">BibTeX</a></h2>
       <pre><code>@article{rout2023beyond,
       title={Beyond First-order Tweedie: Solving Inverse Problems using Latent Diffusion},
-      author={Rout, Litu and Chen, Yujia and Kumar, Abhishek and Caramanis, Constantine and Shakkottai, Sanjay and Chu, Wen-Sheng},
+      author={Rout, L and Chen, Y and Kumar, A and Caramanis, C and Shakkottai, S and Chu, W},
       booktitle={ArXiv},
       year={2023}
 }</code></pre>
     </div>
-  </section> -->
+  </section>
 
 
   <footer class="footer">
