--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://stsl-inverse-edit.github.io/assets/rich_text_to_image_generation.pdf"
+                  <a href="https://stsl-inverse-edit.github.io/assets/stsl-inverse-edit-preprint.pdf"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <svg class="svg-inline--fa fa-file-pdf fa-w-12" aria-hidden="true" focusable="false"
@@ -629,9 +629,9 @@
             <div class="has-text-centered">          
               <p>                                
                 <font color="blue"> 
-                "a high quality photo of the face of a tiger"
+                "a high quality photo of a tiger face"
                 <span>&#8594;</span>
-                "a high quality photo of the face of a <strong>leopard</strong> "
+                "a high quality photo of a <strong>leopard</strong> face"
                 </font>
               </p>
               <br>
@@ -745,9 +745,9 @@
             <div class="has-text-centered">          
               <p>                                
                 <font color="blue"> 
-                "a high quality photo of the face of a cat"
+                "a high quality photo of a cat face"
                 <span>&#8594;</span>
-                "a high quality photo of the face of a <strong>fox</strong> "
+                "a high quality photo of a <strong>fox</strong> face"
                 </font>
               </p>
               <br>
