--- a/index.html
+++ b/index.html
@@ -1169,7 +1169,7 @@
       var inpaint = document.getElementById('inpaint');
       deblur.src = "./image_assets/footnote/deblur/deblur_" + currentInvMethod + ".jpg";
       sr.src = "./image_assets/footnote/sr/sr_" + currentInvMethod + ".jpg";
-      mb.src = "./image_assets/footnote/mb/mb_" + currentInvMethod + ".jpg";
+      mb.src = "./image_assets/footnote/mb/mb_" + currentInvMethod + ".png";
       inpaint.src = "./image_assets/footnote/inpaint/inpaint_" + currentInvMethod + ".jpg";
     }
     function ChangePromptInverse(idx) {
