cite methods in MB

--- a/index.html
+++ b/index.html
@@ -555,11 +555,11 @@
               <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethodInverse(2);">
                   Ours</a></li>
               <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethodInverse(3);">
-                  P2L</a></li>
+                  P2L [4]</a></li>
               <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethodInverse(4);">
-                  PSLD</a></li>
+                  PSLD [3]</a></li>
               <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethodInverse(5);">
-                  LDPS</a></li>
+                  LDPS [3]</a></li>
             </ul>
             <div class="columns is-centered" id="div_deblur" style="display: true;">
               <div class="column">
