remove gray bgd

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       </div>
     </div>
   </section>
-  <section class="hero is-light is-small">
+  <section>
     <div class="hero-body">
       <div class="container is-max-desktop has-text-centered">
         <h2 class="title is-4">STSL for Image Inversion</h2>
