--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
               <span class="author-block"><sup>3</sup>Google DeepMind</span>
             </div>
 
-            <div class="is-size-5 publication-venue">
+            <!-- <div class="is-size-5 publication-venue">
               Website in progress
-            </div>
+            </div> -->
 
             <div class="column has-text-centered">
               <div class="publication-links">
