--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Second-order Tweedie from Surrogate Loss">
   <meta property="og:description" content="Second-order Tweedie from Surrogate Loss">
-  <meta property="og:image" content="https://stsl-inverse-edit.github.io/image_assets/preview.jpg">
+  <meta property="og:image" content="https://stsl-inverse-edit.github.io/image_assets/stsl_preview.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -21,7 +21,7 @@
   <meta property="twitter:url" content="https://stsl-inverse-edit.github.io/">
   <meta name="twitter:title" content="Second-order Tweedie from Surrogate Loss">
   <meta name="twitter:description" content="Second-order Tweedie from Surrogate Loss">
-  <meta name="twitter:image" content="https://stsl-inverse-edit.github.io/image_assets/preview.jpg">
+  <meta name="twitter:image" content="https://stsl-inverse-edit.github.io/image_assets/stsl_preview.png">
 
 
   <!-- Google tag (gtag.js) -->
