--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
   <div class="hero-body">
     <div class="container is-max-desktop has-text-centered">
       <h2 class="title is-4">Abstract</h2>
+      <div class="content has-text-justified">
       <p>
         Sampling from the posterior distribution poses a major computational challenge in solving inverse problems using latent diffusion models.
         Common methods rely on Tweedie's first-order moments, which are known to induce <b>a quality-limiting bias</b>.
@@ -213,6 +214,7 @@
       <p>
         <b>To our best knowledge, this is the first work to offer an efficient second-order approximation in solving inverse problems using latent diffusion and editing real-world images with corruptions.</b>
       </p>
+    </div>
     </div>
   </div>
 
