change edit title

--- a/index.html
+++ b/index.html
@@ -886,9 +886,9 @@
 
               <ul class="nav nav-pills nav-justified" id="prompt-view-ul" style="width: 100%;margin-bottom: 0.5em;">
                 <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);"
-                    onclick="ChangePrompt(0);">Tiger</a>
+                    onclick="ChangePrompt(0);">Tiger2Leopard</a>
                 </li>
-                <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePrompt(1);">Cat</a>
+                <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePrompt(1);">Cat2Fox</a>
                 </li>
               </ul>
               <ul class="nav nav-pills nav-justified" id="method-view-ul" style="width: 100%">
